# pytest-result-sender

./: .flake8  .gitignore  aa.py  conftest.py  msg.md  pyproject.toml  send_to_qiyeWeChatGroup.py
.github/workflows/: publish-to-pypi.yaml
src/pytest_result_sender/: __init__.py  plugin.py
testcases/: test_abc.py  test_ini.py
