[tool.pdm]

[project]
name = "pytest-result-sender03"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor.Gu", email = "guyupei@foxmail.com"},
]
dependencies = [
    "pytest>=7.3.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project.entry-points.pytest11]
 result_log = "pytest_result_sender.plugin"

[tool]
[tool.pdm.build]
package-dir = "src"