[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project]
name = "pytest-result-sender03"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor.Gu", email = "guyupei@foxmail.com"},
]
dependencies = [
    "pytest>=7.3.1",
    "requests>=2.30.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project.entry-points.pytest11]
 result_log = "pytest_result_sender.plugin"

[tool]
[tool.pdm.build]
package-dir = "src"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.tox
  | venv
  | buck-out
  | build
  | dist
)/
'''

# 设置快捷命令别名
[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 .",
] }

test = "pytest"